Updated for python 3.7

--- a/setup_notebook_colab_conda.ipynb
+++ b/setup_notebook_colab_conda.ipynb
@@ -183,8 +183,8 @@
       "source": [
         "%%bash\r\n",
         "\r\n",
-        "# Updates Conda to the most recent version, but hold Python version fixed at 3.6.\r\n",
-        "conda install --channel defaults conda python=3.6 --yes\r\n",
+        "# Updates Conda to the most recent version, but hold Python version fixed at 3.7.10\r\n",
+        "conda install --channel defaults conda python=3.7 --yes\r\n",
         "\r\n",
         "# Updates all of Conda’s dependencies to their most recent versions.\r\n",
         "conda update --channel defaults --all --yes "
@@ -208,7 +208,7 @@
       },
       "source": [
         "!conda --version # now returns 4.9.2\r\n",
-        "!python --version # now returns Python 3.6.12 :: Anaconda, Inc."
+        "!python --version # now returns Python 3.7.9 :: Anaconda, Inc."
       ],
       "execution_count": null,
       "outputs": []
@@ -253,7 +253,7 @@
         "id": "PbeS0XhUionk"
       },
       "source": [
-        "!ls /usr/local/lib/python3.6/dist-packages"
+        "!ls /usr/local/lib/python3.7/dist-packages"
       ],
       "execution_count": null,
       "outputs": []
@@ -266,7 +266,7 @@
       "source": [
         "import sys\r\n",
         "_ = (sys.path\r\n",
-        "        .append(\"/usr/local/lib/python3.6/site-packages\"))"
+        "        .append(\"/usr/local/lib/python3.7/site-packages\"))"
       ],
       "execution_count": null,
       "outputs": []
